--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.40",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
   }
